# ChangeLog for dev-lang/python
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.222 2006/10/18 10:55:28 uberlord Exp $

  18 Oct 2006; Roy Marples <uberlord@gentoo.org> python-2.4.3-r4.ebuild,
  python-2.5-r1.ebuild:
  Added ~sparc-fbsd keyword.

  27 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> python-2.3.5-r3.ebuild,
  python-2.4.3-r4.ebuild:
  Stable on ia64.

  27 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> python-2.3.5-r3.ebuild,
  python-2.4.3-r4.ebuild:
  Stable on Alpha.

  27 Sep 2006; Joshua Jackson <tsunam@gentoo.org> python-2.3.5-r3.ebuild,
  python-2.4.3-r4.ebuild:
  Stable x86; bug #149065

  27 Sep 2006; Jason Wever <weeve@gentoo.org> python-2.3.5-r3.ebuild,
  python-2.4.3-r4.ebuild:
  Stable on SPARC wrt security bug #149065.

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  python-2.3.5-r3.ebuild, python-2.4.3-r4.ebuild:
  Stable on hppa wrt security #149065

  26 Sep 2006; Simon Stelling <blubb@gentoo.org> python-2.3.5-r3.ebuild:
  stable on amd64; bug 149065

  26 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  python-2.3.5-r3.ebuild, python-2.4.3-r4.ebuild:
  ppc stable, bug #149065

  26 Sep 2006; Simon Stelling <blubb@gentoo.org> python-2.4.3-r4.ebuild:
  stable on amd64; bug 149065

  26 Sep 2006; Markus Rothe <corsair@gentoo.org> python-2.3.5-r3.ebuild,
  python-2.4.3-r4.ebuild:
  Stable on ppc64; bug #149065

*python-2.4.3-r4 (26 Sep 2006)
*python-2.3.5-r3 (26 Sep 2006)

  26 Sep 2006; Marien Zwart <marienz@gentoo.org> +python-2.3.5-r3.ebuild,
  +python-2.4.3-r4.ebuild:
  Revision bumps for bug #149065.

*python-2.5-r1 (19 Sep 2006)

  19 Sep 2006; Alastair Tse <liquidx@gentoo.org> python-2.5.ebuild
  +python-2.5-r1.ebuild:
  Fixed patches that still contain the zlib mistake from the 2.4
  patchset. Disabled etree tests.

*python-2.5 (19 Sep 2006)

  19 Sep 2006; Alastair Tse <liquidx@gentoo.org> -python-2.4.3-r2.ebuild,