@@ -50,12 +50,14 @@ DIST Python-2.1.3.tgz 6194432 RMD160 d7216480cf884507d97bf7932767871977fc1ccc SH
 DIST Python-2.2.3.tgz 6709556 RMD160 3590f813582d65194b467f4ab450e360e35eb40e SHA1 177d587e77e0eaa14131ab0d0d0b470777de4400 SHA256 a8f92e6b89d47359fff0d1fbfe47f104afc77fd1cd5143e7332758b7bc100188
 DIST Python-2.3.5.tar.bz2 7230000 RMD160 2b1fa90393f517fe02d546c037996754f65f8c89 SHA1 98bfa6257f73a3826b244047c183d933d26f4322 SHA256 1b81787c3dcae3752cadaa6be80c24e247c239ba93d91538af39b4b717e29bf4
 DIST Python-2.4.3.tar.bz2 8005915 RMD160 c86247554975e6c44f91d05e44e68e280d5244dc SHA1 d6b81e1aec0045b5acff99676f2abe303da1b384 SHA256 c9b3bbc52fa18c6dba7a8c3481fa7de98187c9978749241395305f252134ba2c
+DIST Python-2.4.4.tar.bz2 8158073 RMD160 4c7b5b70178fe69881b62201ef0bab55037d8708 SHA1 9e0971f93df8acbd947378d0d16a32fcc8897ba2 SHA256 325fdc7351a08bd8d811e7fb53c41bff11764648ab1a671abd910afec946b38a
 DIST Python-2.5.tar.bz2 9357099 RMD160 f6977a6c3d3ca54c27ad9270918237a7e6521d0b SHA1 98ce9346cc4a7ef4621ecdcfc3957d595d97a078 SHA256 584fce420e39218312c86b6abb242a14b1b0c1d215e2667b0f491893e41cc236
 DIST python-gentoo-patches-2.2.3.tar.bz2 3141 RMD160 5d841c5e240eed36d0d87bb7006d1e04feffeec1 SHA1 f2363d961311a54a3ff456987565b4b9c2ee7a41 SHA256 c913f0d72a3bd0e210a1426e7f5f1b97e03e6e20ba3ed74665001d8a2aa9ac95
 DIST python-gentoo-patches-2.3.5-r1.tar.bz2 9239 RMD160 0afe928728c2cb5c306bff261e2fbe485a554c71 SHA1 1bfc2b79fe69bed59705b5c734fe8c4af264bf7e SHA256 35e1139aa91f0ac026017928df71b21da68d8470278852e700f0b32d6c638dbf
 DIST python-gentoo-patches-2.3.5.tar.bz2 8489 RMD160 aa2860d06e0aa387c91419ed1a2bb33de14fd393 SHA1 32349bd5e0f6c3859414b4a03643dd89538792f9 SHA256 f144c5488a55599a0d0614f7c687e43106f8b6da51738296aadcec374d567237
 DIST python-gentoo-patches-2.4.3-r1.tar.bz2 8594 RMD160 0a93e8b315eefa832db92398b3f5e8da83fe3ea3 SHA1 7f20fffc6ec4273b898cda394c87929ddd939419 SHA256 295d8131b1f6c0622d92133f6e612821c2af6e1ebefe527aec8d42de49b0b1e9
 DIST python-gentoo-patches-2.4.3-r4.tar.bz2 9386 RMD160 5515c58b626a21a19064a142a9b95e3085b20ad1 SHA1 d10654343754026e909c74111bd96f079879b0ec SHA256 06a00ae4944fae1f0920a5cb91d973bff24b5b37d609f3ef5daaacafa6bb35fb
+DIST python-gentoo-patches-2.4.4.tar.bz2 8841 RMD160 4652b5f3bba59b969816c00927453e0de058663e SHA1 a1b1e8d1b80e41b503e8f49e21ea6a554f23f046 SHA256 6b6b72cd25bc854f3841361d488ab74bdf0febd5a8b73c4a92054d731cd45321
 DIST python-gentoo-patches-2.5-r1.tar.bz2 5180 RMD160 88f7f49ccea043986d837962e3a7d463302b6055 SHA1 395dd562729911815d871bf6df638a96cfa3ae1f SHA256 e56145f22a8d1093a6004177ccd6ecef5e7f9b655633846ee753bd3b45eff4c6
 EBUILD python-2.1.3-r1.ebuild 2287 RMD160 8de40c8c4dcf46ab91458318eb347eb7a683062b SHA1 20928a32586d5aeac1b1c163a61b320c46c133ee SHA256 84381bce78263edac5a361f292ac6eca52c39752483a49beb40b033a0f9d322b
 MD5 0da2c091fdb69c2fc31c6ce46011e0f0 python-2.1.3-r1.ebuild 2287
@@ -81,14 +83,18 @@ EBUILD python-2.4.3-r4.ebuild 10474 RMD160 ab223ffa37a1aff82f3bd6c18425a061350bb
 MD5 d5ed359408a83b864111bb3fdbf700eb python-2.4.3-r4.ebuild 10474
 RMD160 ab223ffa37a1aff82f3bd6c18425a061350bb9b6 python-2.4.3-r4.ebuild 10474
 SHA256 9805d222bc169d238e431db80999ebc8caa31d3ed7b961231433327b98d1ca56 python-2.4.3-r4.ebuild 10474
+EBUILD python-2.4.4.ebuild 10402 RMD160 707932d8cbf544ddd44c203531db36932aadfed9 SHA1 9bc866293c4e597d699f15a9dfa84253a360df4e SHA256 6900a9cb10ae936951e20c3e88acabcee5d6290a6fed06d4979c7fb9a7885924
+MD5 41a4e50725c75ea28a7a15683ae84318 python-2.4.4.ebuild 10402
+RMD160 707932d8cbf544ddd44c203531db36932aadfed9 python-2.4.4.ebuild 10402
+SHA256 6900a9cb10ae936951e20c3e88acabcee5d6290a6fed06d4979c7fb9a7885924 python-2.4.4.ebuild 10402
 EBUILD python-2.5-r1.ebuild 10524 RMD160 0081cb8a86052d934e5f59bc3c4f92465527c3b6 SHA1 6b4e32b6fb385fd6740cd2321c2c2a8033b2f86f SHA256 d097d9af58f1e6d07675c69227b9e5317db9f3511255536626a971715aad76e3
 MD5 095510b9ef1c5996e01d2cbfb027c9eb python-2.5-r1.ebuild 10524
 RMD160 0081cb8a86052d934e5f59bc3c4f92465527c3b6 python-2.5-r1.ebuild 10524
 SHA256 d097d9af58f1e6d07675c69227b9e5317db9f3511255536626a971715aad76e3 python-2.5-r1.ebuild 10524
-MISC ChangeLog 37505 RMD160 501b5347b166a4a4e27b9e1117108c3a0c5122e9 SHA1 5981b2f9e9fa0265f3f2884e9368194100e5acff SHA256 1bd6cde4d6699bdb67ce0d6b33992a148946ea327ec7b51b51424ddb856fc278
-MD5 32439d3373a03c1425169bbe6750043b ChangeLog 37505
-RMD160 501b5347b166a4a4e27b9e1117108c3a0c5122e9 ChangeLog 37505
-SHA256 1bd6cde4d6699bdb67ce0d6b33992a148946ea327ec7b51b51424ddb856fc278 ChangeLog 37505
+MISC ChangeLog 37624 RMD160 db9965bb0bde93e0decccbff7bbfe23e537cf383 SHA1 0c9b548e7a5ddb254f12800d9decdbf057a55153 SHA256 5ca03d53cbaff32f19317a49e123ba7cecd2e1c973ae8492097e62777e7cb37d
+MD5 c4c81cf56da20fad365347d4c35b97a5 ChangeLog 37624
+RMD160 db9965bb0bde93e0decccbff7bbfe23e537cf383 ChangeLog 37624
+SHA256 5ca03d53cbaff32f19317a49e123ba7cecd2e1c973ae8492097e62777e7cb37d ChangeLog 37624
 MISC metadata.xml 221 RMD160 dd50f32b16d6c15330ae1ee711d8a6cf8f6e3bed SHA1 85903c4affc3a23dd37e4910eb9b198cd02b242e SHA256 c14b93d19008cbeeb3312ec60b97513eef18ccfe82b8e2303cb44977ca13e3bd
 MD5 8145ce0144332d6caca98fa5fb648741 metadata.xml 221
 RMD160 dd50f32b16d6c15330ae1ee711d8a6cf8f6e3bed metadata.xml 221
@@ -111,6 +117,9 @@ SHA256 accb145bcb3a651a5d68653dc2becc523343c152d45d66622a3ff6f62c1b26a8 files/di
 MD5 4e05cc5a387fc37c07e9379dc0cec714 files/digest-python-2.4.3-r4 533
 RMD160 8126c987ee9bbfb3be21a1b89398af6f4f3deeaf files/digest-python-2.4.3-r4 533
 SHA256 44c3a05dca66b707c93b758e641e5fb9bd0bd8bdd94dd507203ea223e9e4339c files/digest-python-2.4.3-r4 533
+MD5 157069b1bc43bab782ab6724a655d6dd files/digest-python-2.4.4 524
+RMD160 ad08b16ce248a22c306361fcf0497e1c5fac5b57 files/digest-python-2.4.4 524
+SHA256 62741d3520891774e48cab7c30ba3b788a8cbc512f6655042ddc46de91ee6bc7 files/digest-python-2.4.4 524
 MD5 f9b5c964d826b43c4c4e46c70c8be212 files/digest-python-2.5-r1 521
 RMD160 2d3bf90259ffdc91332550713cabf9a36b686aba files/digest-python-2.5-r1 521
 SHA256 dbc6e2a658c38209466d2a2cf898d619ffd50edbeabc749863af334397b8fe93 files/digest-python-2.5-r1 521
