@@ -1,0 +1,6 @@
+MD5 0ba90c79175c017101100ebf5978e906 Python-2.4.4.tar.bz2 8158073
+RMD160 4c7b5b70178fe69881b62201ef0bab55037d8708 Python-2.4.4.tar.bz2 8158073
+SHA256 325fdc7351a08bd8d811e7fb53c41bff11764648ab1a671abd910afec946b38a Python-2.4.4.tar.bz2 8158073
+MD5 6afff79bf55000eb456f4482d0f26bb0 python-gentoo-patches-2.4.4.tar.bz2 8841
+RMD160 4652b5f3bba59b969816c00927453e0de058663e python-gentoo-patches-2.4.4.tar.bz2 8841
+SHA256 6b6b72cd25bc854f3841361d488ab74bdf0febd5a8b73c4a92054d731cd45321 python-gentoo-patches-2.4.4.tar.bz2 8841
