@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.222 2006/10/18 10:55:28 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.223 2006/11/04 16:23:40 kloeri Exp $
+
+*python-2.4.4 (04 Nov 2006)
+
+  04 Nov 2006; Bryan Østergaard <kloeri@gentoo.org> +python-2.4.4.ebuild:
+  Version bump.
 
   18 Oct 2006; Roy Marples <uberlord@gentoo.org> python-2.4.3-r4.ebuild,
   python-2.5-r1.ebuild:
